--- a/grid/flex-grid.html
+++ b/grid/flex-grid.html
@@ -1,3 +1,4 @@
+<!--
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -112,4 +113,104 @@
     </div>
   </main>
 </body>
+</html>
+ -->
+
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <style>
+      .row {
+        width: 100%vw;
+        height: 20px;
+        margin: 30px;
+        display: flex;
+        background: lightgreen;
+      }
+
+      .box{
+        outline: 1px solid blue;
+        background: lightgray;
+        text-align: center;
+        align-items: center;
+      }
+
+      .col-1{
+        width: calc(100%/12);
+      }
+
+      .col-2{
+        width: calc(100%/12*2);
+      }
+
+      .col-3{
+        width: calc(100%/12*3);
+      }
+
+      .col-4{
+        width: calc(100%/12*4);
+      }
+
+      .col-5{
+        width: calc(100%/12*5);
+      }
+
+      .col-6{
+        width: calc(100%/12*6);
+      }
+
+      .col-7{
+        width: calc(100%/12*7);
+      }
+
+      .col-8{
+        width: calc(100%/12*8);
+      }
+
+      .col-9{
+        width: calc(100%/12*9);
+      }
+
+      .col-10{
+        width: calc(100%/12*10);
+      }
+
+      .col-11{
+        width: calc(100%/12*11);
+      }
+
+      .col-12{
+        width: calc(100%);
+      }
+
+    </style>
+  </head>
+  <body>
+    <div class="row">
+      <div class="box col-1">1</div>
+      <div class="box col-1">2</div>
+      <div class="box col-1">3</div>
+      <div class="box col-1">4</div>
+      <div class="box col-1">5</div>
+      <div class="box col-1">6</div>
+      <div class="box col-1">7</div>
+      <div class="box col-1">8</div>
+      <div class="box col-1">9</div>
+      <div class="box col-1">10</div>
+      <div class="box col-1">11</div>
+      <div class="box col-1">12</div>
+    </div>
+
+    <div class="row">
+      <div class="box col-3">3/12</div>
+      <div class="box col-9">9/12</div>
+    </div>
+
+    <div class="row">
+      <div class="box col-4">4/12</div>
+      <div class="box col-8">8/12</div>
+    </div>
+
+  </body>
 </html>
