--- a/grid/media-query-grid.html
+++ b/grid/media-query-grid.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -125,4 +125,378 @@
     </div>
   </main>
 </body>
+</html>
+ -->
+
+
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <style>
+      .row {
+        width: 100%vw;
+        height: 20px;
+        margin: 30px;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        background: lightgreen;
+      }
+
+      .box{
+        outline: 1px solid blue;
+        background: lightgray;
+        text-align: center;
+        align-items: center;
+      }
+
+      .col-1{
+        width: calc(100%/12);
+      }
+
+      .col-2{
+        width: calc(100%/12*2);
+      }
+
+      .col-3{
+        width: calc(100%/12*3);
+      }
+
+      .col-4{
+        width: calc(100%/12*4);
+      }
+
+      .col-5{
+        width: calc(100%/12*5);
+      }
+
+      .col-6{
+        width: calc(100%/12*6);
+      }
+
+      .col-7{
+        width: calc(100%/12*7);
+      }
+
+      .col-8{
+        width: calc(100%/12*8);
+      }
+
+      .col-9{
+        width: calc(100%/12*9);
+      }
+
+      .col-10{
+        width: calc(100%/12*10);
+      }
+
+      .col-11{
+        width: calc(100%/12*11);
+      }
+
+      .col-12{
+        width: calc(100%);
+      }
+
+        /* s */
+      @media (min-width: 576px) {
+        .col-s-0{
+          width: 0;
+        }
+
+        .col-s-1{
+          width: calc(100%/12);
+        }
+
+        .col-s-2{
+          width: calc(100%/12*2);
+        }
+
+        .col-s-3{
+          width: calc(100%/12*3);
+        }
+
+        .col-s-4{
+          width: calc(100%/12*4);
+        }
+
+        .col-s-5{
+          width: calc(100%/12*5);
+        }
+
+        .col-s-6{
+          width: calc(100%/12*6);
+        }
+
+        .col-s-7{
+          width: calc(100%/12*7);
+        }
+
+        .col-s-8{
+          width: calc(100%/12*8);
+        }
+
+        .col-s-9{
+          width: calc(100%/12*9);
+        }
+
+        .col-s-10{
+          width: calc(100%/12*10);
+        }
+
+        .col-s-11{
+          width: calc(100%/12*11);
+        }
+
+        .col-s-12{
+          width: calc(100%);
+        }
+      }
+
+        /* m */
+      @media (min-width: 768px) {
+
+        .col-m-1{
+          width: calc(100%/12);
+        }
+
+        .col-m-2{
+          width: calc(100%/12*2);
+        }
+
+        .col-m-3{
+          width: calc(100%/12*3);
+        }
+
+        .col-m-4{
+          width: calc(100%/12*4);
+        }
+
+        .col-m-5{
+          width: calc(100%/12*5);
+        }
+
+        .col-m-6{
+          width: calc(100%/12*6);
+        }
+
+        .col-m-7{
+          width: calc(100%/12*7);
+        }
+
+        .col-m-8{
+          width: calc(100%/12*8);
+        }
+
+        .col-m-9{
+          width: calc(100%/12*9);
+        }
+
+        .col-m-10{
+          width: calc(100%/12*10);
+        }
+
+        .col-m-11{
+          width: calc(100%/12*11);
+        }
+
+        .col-m-12{
+          width: calc(100%);
+        }
+      }
+
+      /* l */
+      @media (min-width: 992px) {
+
+        .col-l-1{
+          width: calc(100%/12);
+        }
+
+        .col-l-2{
+          width: calc(100%/12*2);
+        }
+
+        .col-l-3{
+          width: calc(100%/12*3);
+        }
+
+        .col-l-4{
+          width: calc(100%/12*4);
+        }
+
+        .col-l-5{
+          width: calc(100%/12*5);
+        }
+
+        .col-l-6{
+          width: calc(100%/12*6);
+        }
+
+        .col-l-7{
+          width: calc(100%/12*7);
+        }
+
+        .col-l-8{
+          width: calc(100%/12*8);
+        }
+
+        .col-l-9{
+          width: calc(100%/12*9);
+        }
+
+        .col-l-10{
+          width: calc(100%/12*10);
+        }
+
+        .col-l-11{
+          width: calc(100%/12*11);
+        }
+
+        .col-l-12{
+          width: calc(100%);
+        }
+      }
+
+      /* xl */
+      @media (min-width: 1140px) {
+
+        .col-xl-1{
+          width: calc(100%/12);
+        }
+
+        .col-xl-2{
+          width: calc(100%/12*2);
+        }
+
+        .col-xl-3{
+          width: calc(100%/12*3);
+        }
+
+        .col-xl-4{
+          width: calc(100%/12*4);
+        }
+
+        .col-xl-5{
+          width: calc(100%/12*5);
+        }
+
+        .col-xl-6{
+          width: calc(100%/12*6);
+        }
+
+        .col-xl-7{
+          width: calc(100%/12*7);
+        }
+
+        .col-xl-8{
+          width: calc(100%/12*8);
+        }
+
+        .col-xl-9{
+          width: calc(100%/12*9);
+        }
+
+        .col-xl-10{
+          width: calc(100%/12*10);
+        }
+
+        .col-xl-11{
+          width: calc(100%/12*11);
+        }
+
+        .col-xl-12{
+          width: calc(100%);
+        }
+      }
+
+      .wrapper{
+        display: flex;
+        width: 100%;
+        height: 100%;
+        background: green;
+      }
+
+      .leftside{
+        outline: 1px solid blue;
+        background: red;
+      }
+
+      .rightside{
+        background: lightblue;
+        flex-direction: column;
+      }
+
+      }
+      .box{
+        height: 5rem;
+        border: 1px solid blue;
+        background: brown;
+      }
+
+      .content{
+        background: yellow;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+      }
+
+      .card{
+        background: white;
+      }
+    </style>
+  </head>
+  <body>
+    <div class="wrapper">
+
+      <div class="leftside col-s-0 col-m-2 col-l-2 col-xl-2">
+      </div>
+
+      <div class="rightside col-s-12 col-m-10 col-l-10 col-xl-10">
+        <div class="box">
+          Right side
+        </div>
+
+        <div class="content col-s-12 col-m-12 col-l-12 col-xl-12">
+          <div class="card box col-s-12 col-m-12 col-l-6 col-xl-4">
+            card1
+          </div>
+
+          <div class="card box col-s-12 col-m-12 col-l-6 col-xl-4">
+            card2
+          </div>
+
+          <div class="card box col-s-12 col-m-12 col-l-6 col-xl-4">
+            card3
+          </div>
+
+          <div class="card box col-s-12 col-m-12 col-l-6 col-xl-4">
+            card4
+          </div>
+
+          <div class="card box col-s-12 col-m-12 col-l-6 col-xl-4">
+            card5
+          </div>
+
+          <div class="card box col-s-12 col-m-12 col-l-6 col-xl-4">
+            card6
+          </div>
+
+          <div class="card box col-s-12 col-m-12 col-l-6 col-xl-4">
+            card7
+          </div>
+
+          <div class="card box col-s-12 col-m-12 col-l-6 col-xl-4">
+            card8
+          </div>
+
+          <div class="card box col-s-12 col-m-12 col-l-6 col-xl-4">
+            card9
+          </div>
+        </div>
+      </div>
+
+
+    </div>
+  </body>
 </html>
