--- a/grid/media-query-grid.html
+++ b/grid/media-query-grid.html
@@ -10,6 +10,15 @@
       margin-bottom: 30px;
     }
 
+    .side-bar {
+      width: 280px;
+      flex-shrink: 0;
+    }
+
+    .main {
+      flex-grow: 1;
+    }
+
     .row {
       width: 100%;
       display: flex;
@@ -76,6 +85,10 @@
         width: calc(100% / 12 * 2);
       }
 
+      .col-s-6 {
+        width: calc(100% / 12 * 6);
+      }
+
       .col-s-10 {
         width: calc(100% / 12 * 10);
       }
@@ -83,6 +96,10 @@
 
     /* m */
     @media (min-width: 768px) {
+      .col-m-4 {
+        width: calc(100% / 12 * 4);
+      }
+
       .col-m-6 {
         width: calc(100% / 12 * 6);
       }
@@ -90,6 +107,10 @@
 
     /* l */
     @media (min-width: 992px) {
+      .col-l-3 {
+        width: calc(100% / 12 * 3);
+      }
+
       .col-l-4 {
         width: calc(100% / 12 * 4);
       }
@@ -115,11 +136,22 @@
   <main>
     <div class="container">
       <div class="row">
-        <div class="col-12 col-s-2 col-m-6 col-l-4 col-xl-10">
-          col #1
+        <div class="side-bar">
+          Left side
         </div>
-        <div class="col-12 col-s-10 col-m-6 col-l-8 col-xl-2">
-          col #2
+        <div class="main">
+          Right side
+          <div class="row">
+            <div class="col-12 col-s-6 col-m-4 col-l-3 col-xl-2">card 1</div>
+            <div class="col-12 col-s-6 col-m-4 col-l-3 col-xl-2">card 2</div>
+            <div class="col-12 col-s-6 col-m-4 col-l-3 col-xl-2">card 3</div>
+            <div class="col-12 col-s-6 col-m-4 col-l-3 col-xl-2">card 4</div>
+            <div class="col-12 col-s-6 col-m-4 col-l-3 col-xl-2">card 5</div>
+            <div class="col-12 col-s-6 col-m-4 col-l-3 col-xl-2">card 6</div>
+            <div class="col-12 col-s-6 col-m-4 col-l-3 col-xl-2">card 7</div>
+            <div class="col-12 col-s-6 col-m-4 col-l-3 col-xl-2">card 8</div>
+            <div class="col-12 col-s-6 col-m-4 col-l-3 col-xl-2">card 9</div>
+          </div>
         </div>
       </div>
     </div>
