--- a/grid/media-query-grid.html
+++ b/grid/media-query-grid.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=, initial-scale=1.0">
+  <meta name="viewport" content="width=, initial-scale1.0">
   <title>Grid with media queries</title>
   <style>
     .container {
@@ -13,7 +14,7 @@
     .row {
       width: 100%;
       display: flex;
-      flex-wrap: wrap;
+      flex-direction: row;
     }
 
     div[class^='col-'] {
@@ -70,6 +71,24 @@
       width: calc(100% / 12 * 12);
     }
 
+    .side {
+      box-sizing: border-box;
+      flex-wrap: wrap;
+      display: flex;
+      flex-direction: row;
+      /* width: 100%; */
+      min-width: calc(100%/12 * 3);
+
+    }
+
+    /* .side.col-s-2 {
+      display: none;
+    } */
+
+    header {
+      width: 100%;
+    }
+
     /* s */
     @media (min-width: 576px) {
       .col-s-2 {
@@ -109,20 +128,59 @@
         width: calc(100% / 12 * 10);
       }
     }
+
+    @media (max-width: 576px) {
+      .col-s-0 {
+        display: none;
+      }
+
+    }
   </style>
 </head>
+
 <body>
   <main>
     <div class="container">
       <div class="row">
-        <div class="col-12 col-s-2 col-m-6 col-l-4 col-xl-10">
-          col #1
+        <div class="left side col-3  col-s-0  col-m-4 col-l-4 col-xl-4">
+          <header>left side</header>
         </div>
-        <div class="col-12 col-s-10 col-m-6 col-l-8 col-xl-2">
-          col #2
+        <div class="side col-9 col-s-1 col-m-8 col-l-8 col-xl-8">
+          <header>right side</header>
+
+          <div class="col-12 col-s-10 col-m-6 col-l-8 col-xl-2">
+            col 1
+          </div>
+          <div class="col-12 col-s-10 col-m-6 col-l-8 col-xl-2">
+            col 2
+          </div>
+          <div class="col-12 col-s-10 col-m-6 col-l-8 col-xl-2">
+            col 3
+          </div>
+          <div class="col-12 col-s-10 col-m-6 col-l-8 col-xl-2">
+            col 4
+          </div>
+          <div class="col-12 col-s-10 col-m-6 col-l-8 col-xl-2">
+            col 5
+          </div>
+          <div class="col-12 col-s-10 col-m-6 col-l-8 col-xl-2">
+            col 6
+          </div>
+          <div class="col-12 col-s-10 col-m-6 col-l-8 col-xl-2">
+            col 7
+          </div>
+          <div class="col-12 col-s-10 col-m-6 col-l-8 col-xl-2">
+            col 8
+          </div>
+          <div class="col-12 col-s-10 col-m-6 col-l-8 col-xl-2">
+            col 9
+          </div>
+
         </div>
       </div>
     </div>
   </main>
 </body>
+
 </html>
+
