--- a/grid/media-query-grid.html
+++ b/grid/media-query-grid.html
@@ -5,124 +5,356 @@
   <meta name="viewport" content="width=, initial-scale=1.0">
   <title>Grid with media queries</title>
   <style>
-    .container {
-      width: 100%;
-      margin-bottom: 30px;
-    }
+    body {
+  height: 100%;
+  min-height: 100%;
+}
 
-    .row {
-      width: 100%;
-      display: flex;
-      flex-wrap: wrap;
-    }
+.container {
+  width: 100%;
+  margin-top: 30px;
+  display: flex;
+  outline: solid 1px red;
+  text-align: center;
+}
 
-    div[class^='col-'] {
-      outline: 1px solid red;
-      background: lightgray;
-      text-align: center;
-    }
+.left-side {
+  width: calc(100% / 12 * 3);
+  }
 
-    .col-1 {
-      width: calc(100% / 12);
-    }
+.right-side {
+  width: 100%;
+}
 
-    .col-2 {
+.row {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  }
+
+div[class^='col-'] {
+  outline: solid 1px red;
+  background: lightgray;
+  text-align: center;
+}
+
+@media (max-width: 576px) {
+  .left-side {
+    display: none;
+  }
+}
+
+.col-1 {
+  width: calc(100% / 12 * 1);
+}
+
+.col-2 {
+  width: calc(100% / 12 * 2);
+}
+
+.col-3 {
+  width: calc(100% / 12 * 3);
+}
+
+.col-4 {
+  width: calc(100% / 12 * 4);
+}
+
+.col-5 {
+  width: calc(100% / 12 * 5);
+}
+
+.col-6 {
+  width: calc(100% / 12 * 6);
+}
+
+.col-7 {
+  width: calc(100% / 12 * 7);
+}
+
+.col-8 {
+  width: calc(100% / 12 * 8);
+}
+
+.col-9 {
+  width: calc(100% / 12 * 9);
+}
+
+.col-10 {
+  width: calc(100% / 12 * 10);
+}
+
+.col-11 {
+  width: calc(100% / 12 * 11);
+}
+
+.col-12 {
+  width: calc(100% / 12 * 12);
+}
+
+.col-4 {
+  width: calc(100% / 12 * 4);
+}
+
+.col-8 {
+  width: calc(100% / 12 * 8);
+}
+
+.col-2 {
+  width: calc(100% / 12 * 2);
+}
+
+.col-6 {
+  width: calc(100% / 12 * 6);
+}
+
+@media (min-width: 576px) {
+  .col-s-1 {
+    width: calc(100% / 12 * 1);
+  }
+
+  .col-s-2 {
+    width: calc(100% / 12 * 2);
+  }
+
+  .col-s-3 {
+    width: calc(100% / 12 * 3);
+  }
+
+  .col-s-4 {
+    width: calc(100% / 12 * 4);
+  }
+
+  .col-s-5 {
+    width: calc(100% / 12 * 5);
+  }
+
+  .col-s-6 {
+    width: calc(100% / 12 * 6);
+  }
+
+  .col-s-7 {
+    width: calc(100% / 12 * 7);
+  }
+
+  .col-s-8 {
+    width: calc(100% / 12 * 8);
+  }
+
+  .col-s-9 {
+    width: calc(100% / 12 * 9);
+  }
+
+  .col-s-10 {
+    width: calc(100% / 12 * 10);
+  }
+
+  .col-s-11 {
+    width: calc(100% / 12 *11);
+  }
+
+  .col-s-12 {
+    width: calc(100% / 12 * 12);
+  }
+}
+
+@media (min-width: 768px) {
+  .col-m-1 {
+    width: calc(100% / 12 * 1);
+  }
+  
+  .col-m-2 {
+    width: calc(100% / 12 * 2);
+  }
+
+  .col-m-3 {
+    width: calc(100% / 12 * 3);
+  }
+
+  .col-m-4 {
+    width: calc(100% / 12 * 6);
+  }
+
+  .col-m-5 {
+    width: calc(100% / 12 * 5);
+  }
+
+  .col-m-6 {
+    width: calc(100% / 12 * 6);
+  }
+
+  .col-m-7 {
+    width: calc(100% / 12 * 7);
+  }
+
+  .col-m-8 {
+    width: calc(100% / 12 * 8);
+  }
+
+  .col-m-7 {
+    width: calc(100% / 12 * 7);
+  }
+
+  .col-m-8 {
+    width: calc(100% / 12 * 8);
+  }
+
+  .col-m-9 {
+    width: calc(100% / 12 * 9);
+  }
+
+  .col-m-10 {
+    width: calc(100% / 12 * 10);
+  }
+
+  .col-m-11 {
+    width: calc(100% / 12 * 11);
+  }
+
+  .col-m-12 {
+    width: calc(100% / 12 * 12);
+  }
+}
+
+@media (min-width: 992px) {
+  .col-l-1 {
+    width: calc(100% / 12 * 1);
+  }
+
+  .col-l-2 {
+    width: calc(100% / 12 * 2);
+  }
+
+  .col-l-3 {
+    width: calc(100% / 12 * 3);
+  }
+
+  .col-l-4 {
+    width: calc(100% / 12 * 4);
+  }
+
+  .col-l-5 {
+    width: calc(100% / 12 * 5);
+  }
+
+  .col-l-6 {
+    width: calc(100% / 12 * 6);
+  }
+
+  .col-l-7 {
+    width: calc(100% / 12 * 7);
+  }
+
+  .col-l-8 {
+    width: calc(100% / 12 * 8);
+  }
+
+  .col-l-9 {
+    width: calc(100% / 12 * 9);
+  }
+
+  .col-l-10 {
+    width: calc(100% / 12 * 10);
+  }
+
+  .col-l-11 {
+    width: calc(100% / 12 *11);
+  }
+
+  .col-l-12 {
+    width: calc(100% / 12 * 12);
+  }
+} 
+
+  @media (min-width: 1200px) {
+    .col-xl-1 {
+      width: calc(100% / 12 * 1);
+    }
+  
+    .col-xl-2 {
       width: calc(100% / 12 * 2);
     }
-
-    .col-3 {
+  
+    .col-xl-3 {
       width: calc(100% / 12 * 3);
     }
-
-    .col-4 {
+  
+    .col-xl-4 {
       width: calc(100% / 12 * 4);
     }
-
-    .col-5 {
+  
+    .col-xl-5 {
       width: calc(100% / 12 * 5);
     }
-
-    .col-6 {
+  
+    .col-xl-6 {
       width: calc(100% / 12 * 6);
     }
-
-    .col-7 {
+  
+    .col-xl-7 {
       width: calc(100% / 12 * 7);
     }
-
-    .col-8 {
+  
+    .col-xl-8 {
       width: calc(100% / 12 * 8);
     }
-
-    .col-9 {
+  
+    .col-xl-9 {
       width: calc(100% / 12 * 9);
     }
-
-    .col-10 {
+  
+    .col-xl-10 {
       width: calc(100% / 12 * 10);
     }
-
-    .col-11 {
-      width: calc(100% / 12 * 11);
+  
+    .col-xl-11 {
+      width: calc(100% / 12 *11);
     }
-
-    .col-12 {
+  
+    .col-xl-12 {
       width: calc(100% / 12 * 12);
     }
-
-    /* s */
-    @media (min-width: 576px) {
-      .col-s-2 {
-        width: calc(100% / 12 * 2);
-      }
-
-      .col-s-10 {
-        width: calc(100% / 12 * 10);
-      }
-    }
-
-    /* m */
-    @media (min-width: 768px) {
-      .col-m-6 {
-        width: calc(100% / 12 * 6);
-      }
-    }
-
-    /* l */
-    @media (min-width: 992px) {
-      .col-l-4 {
-        width: calc(100% / 12 * 4);
-      }
-
-      .col-l-8 {
-        width: calc(100% / 12 * 8);
-      }
-    }
-
-    /* xl */
-    @media (min-width: 1200px) {
-      .col-xl-2 {
-        width: calc(100% / 12 * 2);
-      }
-
-      .col-xl-10 {
-        width: calc(100% / 12 * 10);
-      }
-    }
+  }
   </style>
 </head>
 <body>
-  <main>
-    <div class="container">
+  <div class="container">
+    <div class="left-side">
+      left side
+    </div>
+    <div class="right-side">
+      
       <div class="row">
-        <div class="col-12 col-s-2 col-m-6 col-l-4 col-xl-10">
-          col #1
+        <div class="col-12 col-s-12 col-m-6 col-l-4">
+          card 1
         </div>
-        <div class="col-12 col-s-10 col-m-6 col-l-8 col-xl-2">
-          col #2
+        <div class="col-12 col-s-12 col-m-6 col-l-4">
+          card 2
+        </div>
+        <div class="col-12 col-s-12 col-m-6 col-l-4">
+          card 3
+        </div>
+        <div class="col-12 col-s-12 col-m-6 col-l-4">
+          card 4
+        </div>
+        <div class="col-12 col-s-12 col-m-6 col-l-4">
+          card 5
+        </div>
+        <div class="col-12 col-s-12 col-m-6 col-l-4">
+          card 6
+        </div>
+        <div class="col-12 col-s-12 col-m-6 col-l-4">
+        card 7
+        </div>
+        <div class="col-12 col-s-12 col-m-6 col-l-4">
+          card 8
+        </div>
+        <div class="col-12 col-s-12 col-m-6 col-l-4">
+          card 9
         </div>
       </div>
     </div>
-  </main>
+  </div>
+</div>
 </body>
 </html>
