--- a/grid/media-query-grid.html
+++ b/grid/media-query-grid.html
@@ -83,8 +83,40 @@
 
     /* s */
     @media (min-width: 576px) {
+      .col-s-1 {
+        width: calc(100% / 12 * 1);
+      }
+
       .col-s-2 {
         width: calc(100% / 12 * 2);
+      }
+
+      .col-s-3 {
+        width: calc(100% / 12 * 3);
+      }
+
+      .col-s-4 {
+        width: calc(100% / 12 * 4);
+      }
+
+      .col-s-5 {
+        width: calc(100% / 12 * 5);
+      }
+
+      .col-s-6 {
+        width: calc(100% / 12 * 6);
+      }
+
+      .col-s-7 {
+        width: calc(100% / 12 * 7);
+      }
+
+      .col-s-8 {
+        width: calc(100% / 12 * 8);
+      }
+
+      .col-s-9 {
+        width: calc(100% / 12 * 9);
       }
 
       .col-s-10 {
@@ -95,26 +127,126 @@
 
     /* m */
     @media (min-width: 768px) {
+      .col-m-1 {
+        width: calc(100% / 12 * 1);
+      }
+
+      .col-m-2 {
+        width: calc(100% / 12 * 2);
+      }
+
+      .col-m-3 {
+        width: calc(100% / 12 * 3);
+      }
+
+      .col-m-4 {
+        width: calc(100% / 12 * 4);
+      }
+
+      .col-m-5 {
+        width: calc(100% / 12 * 5);
+      }
+
       .col-m-6 {
         width: calc(100% / 12 * 6);
+      }
+
+      .col-m-7 {
+        width: calc(100% / 12 * 7);
+      }
+
+      .col-m-8 {
+        width: calc(100% / 12 * 8);
+      }
+
+      .col-m-9 {
+        width: calc(100% / 12 * 9);
+      }
+
+      .col-m-10 {
+        width: calc(100% / 12 * 10);
       }
     }
 
     /* l */
     @media (min-width: 992px) {
+      .col-l-1 {
+        width: calc(100% / 12 * 1);
+      }
+
+      .col-l-2 {
+        width: calc(100% / 12 * 2);
+      }
+
+      .col-l-3 {
+        width: calc(100% / 12 * 3);
+      }
+
       .col-l-4 {
         width: calc(100% / 12 * 4);
+      }
+
+      .col-l-5 {
+        width: calc(100% / 12 * 5);
+      }
+
+      .col-l-6 {
+        width: calc(100% / 12 * 6);
+      }
+
+      .col-l-7 {
+        width: calc(100% / 12 * 7);
       }
 
       .col-l-8 {
         width: calc(100% / 12 * 8);
       }
+
+      .col-l-9 {
+        width: calc(100% / 12 * 9);
+      }
+
+      .col-l-10 {
+        width: calc(100% / 12 * 10);
+      }
     }
 
     /* xl */
     @media (min-width: 1200px) {
+      .col-xl-1 {
+        width: calc(100% / 12 * 1);
+      }
+
       .col-xl-2 {
         width: calc(100% / 12 * 2);
+      }
+
+      .col-xl-3 {
+        width: calc(100% / 12 * 3);
+      }
+
+      .col-xl-4 {
+        width: calc(100% / 12 * 4);
+      }
+
+      .col-xl-5 {
+        width: calc(100% / 12 * 5);
+      }
+
+      .col-xl-6 {
+        width: calc(100% / 12 * 6);
+      }
+
+      .col-xl-7 {
+        width: calc(100% / 12 * 7);
+      }
+
+      .col-xl-8 {
+        width: calc(100% / 12 * 8);
+      }
+
+      .col-xl-9 {
+        width: calc(100% / 12 * 9);
       }
 
       .col-xl-10 {
