--- a/grid/media-query-grid.html
+++ b/grid/media-query-grid.html
@@ -9,13 +9,15 @@
       width: 100%;
       margin-bottom: 30px;
       display: flex;
-      outline: 1px solid red;
+
+
+
+
 
     }
 
     .Left-side {
-      width: 30%;
-      display: flex;
+      width: 30% ;
       outline: 1px solid red;
 
     }
@@ -25,14 +27,14 @@
       display: flex;
       flex-direction: column;
       outline: 1px solid red;
-
-
     }
 
+
+
   .row {
+    width: 100%;
     display: flex;
     flex-wrap: wrap;
-
 
 
 
@@ -43,6 +45,14 @@
     div[class^='col-'] {
       outline: 1px solid red;
       text-align: center;
+    }
+
+    .h-100 {
+      height: 100%;
+    }
+
+    .d-none {
+      display: none;
     }
 
     .col-1 {
@@ -101,6 +111,7 @@
     /* s */
     @media (min-width: 576px) {
 
+
       .col-s-1 {
       width: calc(100% / 12);
 
@@ -157,6 +168,10 @@
 
     /* m */
     @media (min-width: 768px) {
+      .d-m-block {
+        display: block !important;
+
+      }
 
       .col-m-1 {
       width: calc(100% / 12);
@@ -320,49 +335,45 @@
   <main>
     <div class="container">
 
-      <div class="Left-side">
-      <div class="s-none m-block l-block"> Left side
-      </div>
+      <div class="row h-100">
+      <div class="col-m-4 col-l-3 d-none d-m-block"> Left side
       </div>
 
-      <div class="Right-side">Right side
-
-          <div class="col-12 col-s-6 col-m-8 col-l-10 col-xl-12">
-        </div>
+      <div class="Right-side col-m-8 col-l-9">Right side
 
         <div class="row">
 
-        <div class="col-4 col-xs-12 col-s-12 col-m-6 col-l-6 col-xl-4">
+        <div class="col-4  col-s-12 col-m-6 col-l-6 col-xl-4">
           card1
         </div>
-        <div class="col-4 col-xs-12 col-s-12 col-m-6 col-l-6 col-xl-4">
+        <div class="col-4 col-s-12 col-m-6 col-l-6 col-xl-4">
           card2
         </div>
-        <div class="col-4 col-xs-12 col-s-12 col-m-6 col-l-6 col-xl-4">
+        <div class="col-4  col-s-12 col-m-6 col-l-6 col-xl-4">
           card3
         </div>
 
-        <div class="col-4 col-xs-12 col-s-12 col-m-6 col-l-6 col-xl-4">
+        <div class="col-4  col-s-12 col-m-6 col-l-6 col-xl-4">
           card4
         </div>
-        <div class="col-4 col-xs-12 col-s-12 col-m-6 col-l-6 col-xl-4">
+        <div class="col-4  col-s-12 col-m-6 col-l-6 col-xl-4">
           card5
         </div>
-        <div class="col-4 col-xs-12 col-s-12 col-m-6 col-l-6 col-xl-4">
+        <div class="col-4  col-s-12 col-m-6 col-l-6 col-xl-4">
           card6
         </div>
-          <div class="col-4 col-xs-12 col-s-12 col-m-6 col-l-6 col-xl-4">
+          <div class="col-4  col-s-12 col-m-6 col-l-6 col-xl-4">
             card7
           </div>
-          <div class="col-4 col-xs-12 col-s-12 col-m-6 col-l-6 col-xl-4">
+          <div class="col-4 col-s-12 col-m-6 col-l-6 col-xl-4">
             card8
           </div>
-          <div class="col-4 col-xs-12 col-s-12 col-m-6 col-l-6 col-xl-4">
+          <div class="col-4  col-s-12 col-m-6 col-l-6 col-xl-4">
             card9
           </div>
       </div>
     </div>
-
+  </div>
   </main>
 </body>
 </html>
