--- a/grid/media-query-grid.html
+++ b/grid/media-query-grid.html
@@ -137,6 +137,10 @@
 </head>
 <body>
   <main>
+    <div class="header">
+      123
+    </div>
+
     <div class="container">
       <div class="row">
         <div class="disp">
